[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open_supply"
version = "1.0.0"
description = "OpenEnv Supply Chain Logistics Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"